-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.11.0
-
None
-
3
-
9223372036854775807
We're allowed to start at a non-aligned page offset in the first fragment and end at a non-aligned page offset in the last fragment.
Currently the first fragment is not considered. So it's possible to start on a non-aligned page boundary and consider that there is a gap in the transmit buffer, which is not correct.